--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -3,7 +3,7 @@
 {{> "twitter-sdk"}}
 {{#post}}
   <main id="content" class="content post-container" role="main">
-    {{> "carousel-footer"}}
+    {{> "carousel-footer" fixed=true}}
 
     <div class="container">
       {{> "post-breadcrumbs"}}
