--- a/content/themes/fedes/tag.hbs
+++ b/content/themes/fedes/tag.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 <main id="content" class="content blog-content" role="main">
-  {{> "carousel-footer"}}
+  {{> "carousel-footer" fixed="true"}}
 
   {{#tag}}
     <div class="container post-breadcrumbs">
