enhance post view

--- a/content/themes/fedes/lib/stylesheets/components/post.sass
+++ b/content/themes/fedes/lib/stylesheets/components/post.sass
@@ -19,8 +19,8 @@ $postMarginLeftSM: 20px
 .post-container
   @media (min-width: $tablet-width)
     .container
-      margin-right: 0
-      padding-right: 0
+      // margin-right: 0
+      // padding-right: 0
     .post-contents
       padding-right: 30px
     .post-categories--other-posts
