enhance view for contactos

--- a/content/themes/fedes/partials/menuSuperior.hbs
+++ b/content/themes/fedes/partials/menuSuperior.hbs
@@ -13,7 +13,7 @@
           <span class="glyphicon glyphicon-chevron-right"></span>
           Inicio
         </a></li>
-        <li><a class="navbar-menuItem" href="/contactos">
+        <li><a class="navbar-menuItem" href="/contactos/">
           <span class="glyphicon glyphicon-chevron-right"></span>
           Contactos
         </a></li>
