--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -2,6 +2,8 @@
   margin-top: 26px
   width: 100%
   height: 300px
+  @media (min-width: $desktop-width)
+    height: 400px
 .contactosSection
   font-family: latoLight
   form
@@ -15,7 +17,7 @@
   @media (min-width: $tablet-width)
     position: absolute
     width: 250px
-    left: 270px
+    left: 300px
     margin-top: 65px
   .textFooter-title
     font-size: 20px
@@ -35,6 +37,7 @@
   &.actually-on-contacts
     @media (min-width: $tablet-width)
       margin-top: 80px
+      text-align: left
   img
     margin: 1em auto
 
