--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -99,7 +99,7 @@
   .container.gallery-principal
     padding-left: 0
     padding-right: 0
-    margin-left: 0
+    // margin-left: 0
     .serviceList
       margin-left: 30px
       margin-right: 6px
