--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -79,6 +79,7 @@
         <li><a class="navbar-menuItem" href="/blog">Blog</a></li>
         <li><a class="navbar-menuItem" href="/aliados">Aliados</a></li>
       </ul>
+      <div id="google_translate_element"></div>
     </div>
   </div>
 </nav>
