--- a/content/themes/fedes/partials/menuSuperior.hbs
+++ b/content/themes/fedes/partials/menuSuperior.hbs
@@ -9,18 +9,24 @@
     <div class ="triangle-topright"></div>
     <div class="container-fluid">
       <ul class="nav navbar-nav listHeader">
-        <li><a class="navbar-menuItem" href="/">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          Inicio
-        </a></li>
-        <li><a class="navbar-menuItem" href="/contactos/">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          Contactos
-        </a></li>
-        <li><a class="navbar-menuItem" href="#">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          English
-        </a></li>
+        <li>
+          <a class="navbar-menuItem" href="/">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            Inicio
+          </a>
+        </li>
+        <li>
+          <a class="navbar-menuItem" href="/contactos/">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            Contactos
+          </a>
+        </li>
+        <li>
+          <a class="navbar-menuItem translate-english-action" href="#">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            English
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
