--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -11,6 +11,7 @@
 @import "components/post"
 @import "components/header"
 @import "components/footer"
+@import "components/footer_google_translate"
 @import "components/proyectos"
 @import "components/servicios"
 @import "components/gallery"
