--- a/content/themes/fedes/partials/navigationCarousel.hbs
+++ b/content/themes/fedes/partials/navigationCarousel.hbs
@@ -19,7 +19,7 @@
       <ul class="nav navbar-nav navbar-list navbar-carousel">
         <li><a class="navbar-menuItem" href="/">Inicio</a></li>
         <li><a class="navbar-menuItem" href="/contactos">Contactos</a></li>
-        <li><a class="navbar-menuItem" href="#">English</a></li>
+        <li><a class="navbar-menuItem translate-english-action" href="#">English</a></li>
         {{navigation}}
       </ul>
     </div>
