--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -15,8 +15,8 @@
             <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
               <div class="gallery-element">
                 <div class="img-gallery">
-                  <img class="img-responsive"
-                        style="background-image: url('{{image}}')" />
+                  <div class="img-responsive"
+                        style="background-image: url('{{image}}')"></div>
                 </div>
                 <div class="gallery-caption-wrapper">
                   <div class="gallery-caption">
