google custom search

--- a/content/themes/fedes/partials/menuSuperior.hbs
+++ b/content/themes/fedes/partials/menuSuperior.hbs
@@ -5,9 +5,10 @@
     </a>
   </div>
   <nav class="navbar navbar-default headerNavbar hidden-xs col-md-7 col-md-offset-5 col-sm-7 col-sm-offset-5">
-
     <div class ="triangle-topright"></div>
     <div class="container-fluid">
+      {{> "gcse"}}
+
       <ul class="nav navbar-nav listHeader">
         <li>
           <a class="navbar-menuItem" href="/">
