--- a/content/themes/fedes/lib/stylesheets/components/post.sass
+++ b/content/themes/fedes/lib/stylesheets/components/post.sass
@@ -61,13 +61,13 @@ $postMarginLeftSM: 20px
       margin-top: 20px
       margin-left: $postMarginLeftSM
     .post-contents--author
-      font-weight: bold;
+      font-weight: bold
       color: $blue-dark
   .post-contents--content
     margin-left: $postMarginLeftXS
     text-align: justify
     font-size: 14px
-    line-height: 17px
+    line-height: 20px
     @media (min-width: $tablet-width)
       margin-left: $postMarginLeftSM
 
