--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="post-contents col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-8 col-md-offset-0 col-md-8">
           <div class="post-contents--header">
-            <h2>{{title}}Nemo laborum iure sunt dolores et.</h2>
+            <h2>{{title}}</h2>
             <div class="img-responsive"
               style="background-image: url('{{image}}')"></div>
             <div class="post-contents--caption">
