google site verification token

--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -12,6 +12,7 @@
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
   <link rel="stylesheet" href="{{asset 'css/application.css'}}">
+  <meta name="google-site-verification" content="5oX7GLBkCyaFjmcB2wBO_irkBZvHubJrjvXb4LNLSHg" />
   {{ghost_head}}
 </head>
 <body class="{{body_class}}">
