--- a/content/themes/fedes/error.hbs
+++ b/content/themes/fedes/error.hbs
@@ -3,7 +3,9 @@
 {{! The main content area on the homepage }}
 <main id="content" class="content" role="main">
   {{> "carousel-footer" fixed="true"}}
-  <h1>error</h1>
-  <p class="notice">página no encontrada</p>
-  <a href="/" class="btn btn-primary">volver</a>
+  <div class="error-wrapper">
+    <h1>ups!</h1>
+    <h2>no hemos encontrado lo que estás buscando</h2>
+    <a href="/" class="btn btn-primary">volver</a>
+  </div>
 </main>
