--- a/content/themes/fedes/lib/stylesheets/components/error.sass
+++ b/content/themes/fedes/lib/stylesheets/components/error.sass
@@ -4,9 +4,28 @@
   background-position: 50%
   background-repeat: no-repeat
   text-align: center
+  @media (max-width: $mobile-width)
+    background-size: 110%
+    min-height: 300px
+    h1
+      padding-top: 110px
+      font-size: 22px
+    h2
+      font-size: 16px
+      margin: 45px auto 10px auto
+      max-width: 140px
+  @media (min-width: $tablet-width)
+    min-height: 400px
+    h1
+      padding-top: 125px
+    h2
+      font-size: 26px
+      margin: 100px auto 20px auto
+      max-width: 270px
   @media (min-width: $desktop-width)
     min-height: 500px
-    padding-top: 130px
+    h1
+      padding-top: 145px
     h2
-      margin: 150px auto 40px auto
+      margin: 160px auto 40px auto
       max-width: 320px
