--- a/content/themes/fedes/lib/stylesheets/components/gcse.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gcse.sass
@@ -13,9 +13,11 @@
 
 .gcse-fedes-search
   margin: 18px 0 0 15px
-  display: inline-block
   position: relative
   z-index: 3
+  display: none
+  @media (min-width: $desktop-width)
+    display: inline-block
   input
     border: 1px solid $blue-dark
     border-radius: 6px
