--- a/content/themes/fedes/page-aliados.hbs
+++ b/content/themes/fedes/page-aliados.hbs
@@ -14,6 +14,7 @@
           {{#get "posts" filter="tag:aliadosfedes" as |services|}}
             {{#foreach services}}
               <div class="col-xs-12 col-sm-4 aliado-wrapper">
+                <a href="{{url}}">
                 <figure class="aliado img-gallery-services">
                   <div style="background-image: url({{image}});"
                     class="img-responsive"
@@ -22,6 +23,7 @@
                     <p>{{title}}</p>
                   </div>
                 </figure>
+              </a>
               </div>
             {{/foreach}}
           {{/get}}
