--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -14,7 +14,7 @@
           {{#foreach post}}
             <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
               <div class="gallery-element">
-                <div class="img-gallery">
+                <div class="img-gallery" data-toggle="collapse" data-target="#colabora">
                   <div class="img-responsive"
                         style="background-image: url('{{image}}')"></div>
                 </div>
@@ -23,6 +23,12 @@
                     <p>{{title}}</p>
                   </div>
                 </div>
+              </div>
+            </div>
+            <div class="register-content toggable-content collapse col-xs-12" id="colabora">
+              <div class="top-arrow"></div>
+              <div class="toggable-content--content col-xs-9">
+                <div class="content">{{content}}</div>
               </div>
             </div>
           {{/foreach}}
