--- a/content/themes/fedes/partials/proyectos.hbs
+++ b/content/themes/fedes/partials/proyectos.hbs
@@ -21,7 +21,13 @@
                 {{/if}}
                 ></div>
               <div class="gallery-text-content transparent-overlay">
-                <div class="projectContent">{{content}}</div>
+                <div class="projectContent">
+                  {{#if meta_description}}
+                    {{meta_description}}
+                  {{else}}
+                    {{content}}
+                  {{/if}}
+                </div>
               </div>
             </div>
             <div class="gallery-caption-wrapper">
