revise main carousel text positioning

--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -46,12 +46,14 @@
     .carousel.text
       text-align: left
       color: #fff
-      margin-top: 3%
+      margin-top: 5px
       margin-left: 18%
       margin-right: 15%
       white-space: normal
       position: relative
       overflow: hidden
+      @media (max-width: $tablet-width)
+        margin-top: 3%
       h1
         font-size: 3.3vw
         font-weight: bold
