--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -22,7 +22,7 @@
       @media (min-width: $tablet-width) and (orientation: landscape)
         height: 300px
         .carousel.text .content-wrapper
-          max-height: 80px
+          max-height: 100%
       @media (min-width: $desktop-width)
         height: 550px
       .img-responsive
@@ -39,6 +39,7 @@
     bottom: -1px
     opacity: 0.7
     position: absolute
+    overflow: hidden
 
     @media (min-width: $tablet-width)
       bottom: 30px
@@ -103,7 +104,7 @@
 @media (min-width: $mobile-width)
   .container.carousel
     .menu-carousel
-      height: 174px
+      height: 200px
       .carousel-controls-wrapper
         display: block
         width: 100%
