--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -42,7 +42,7 @@
     overflow: hidden
 
     @media (min-width: $tablet-width)
-      bottom: 30px
+      // bottom: 30px
 
     .carousel.text
       text-align: left
@@ -104,7 +104,7 @@
 @media (min-width: $mobile-width)
   .container.carousel
     .menu-carousel
-      height: 200px
+      height: 230px
       .carousel-controls-wrapper
         display: block
         width: 100%
