--- a/content/themes/fedes/lib/stylesheets/components/proyectos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/proyectos.sass
@@ -13,6 +13,8 @@
     @media (min-width: $tablet-width)
       width: $maxTabletWidth
       margin: auto
+    @media (min-width: $desktop-width)
+      width: $maxDesktopWidth
       & > section
         padding-left: 0
         padding-right: 0
