--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -105,6 +105,8 @@
   .container.carousel
     .menu-carousel
       height: 230px
+      @media (min-width: $desktop-width)
+        height: 260px
       .carousel-controls-wrapper
         display: block
         width: 100%
