--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -41,6 +41,8 @@
     clip-path: polygon(0 55%, 100% 25%, 100% 100%, 0% 100%)
     p
       padding: 0 2% 2% 30%
+      @media (min-width: $desktop-width)
+        padding: 0 2% 2% 40%
       margin-bottom: 10px
       margin: 1% 2%
       font-size: 13px
