--- a/content/themes/fedes/index.hbs
+++ b/content/themes/fedes/index.hbs
@@ -5,5 +5,6 @@
 <main id="content" class="content" role="main">
   {{! The tag below includes the post loop - partials/loop.hbs }}
   {{> "carousel"}}
+  {{> "fedes-main"}}
   {{> "proyectos"}}
 </main>
