--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -21,6 +21,11 @@
                 {{> "footer-section" article=article}}
               {{/get}}
             </ul>
+            <ul class="nav nav-pills nav-stacked">
+              {{#get "posts" slug="email-fedes" as |article|}}
+                {{> "footer-section" article=article}}
+              {{/get}}
+            </ul>
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
