ui for fedes-main

--- a/content/themes/fedes/partials/proyectos.hbs
+++ b/content/themes/fedes/partials/proyectos.hbs
@@ -1,4 +1,6 @@
 <div class="container gallery gallery-principal">
+  {{> "fedes-main"}}
+
   <div class="mainTitle">
     {{#get "tags" filter="slug:proyectos" as |proyectosTag|}}
       {{#proyectosTag}}
