revise styles for carousel

--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -20,9 +20,11 @@
       @media (min-width: $tablet-width)
         height: 500px
       @media (min-width: $tablet-width) and (orientation: landscape)
-        height: 300px
+        height: 400px
         .carousel.text .content-wrapper
           max-height: 100%
+      @media (min-width: $tablet-width) and (orientation: landscape)
+        height: 500px
       @media (min-width: $desktop-width)
         height: 550px
       .img-responsive
@@ -104,7 +106,7 @@
 @media (min-width: $mobile-width)
   .container.carousel
     .menu-carousel
-      height: 230px
+      height: 200px
       @media (min-width: $desktop-width)
         height: 260px
       .carousel-controls-wrapper
