revise searchbox (UI)

--- a/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
@@ -21,6 +21,8 @@
       font-family: latoLight
       top: 5px
       right: 108px
+      @media (max-width: $desktopHD-width)
+        right: 50px
       &.navbar-nav>li>a
         color: #333
       .glyphicon
