--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -8,6 +8,9 @@ footer
     .footer-inner
       max-width: $maxMobileWidth
       margin: auto
+  @media (min-width: $tablet-width)
+    .footer-inner
+      min-height: 300px
 
   button
     color: white
