--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -18,6 +18,7 @@
 .register-content
   z-index: 3
   @media (min-width: $tablet-width)
+    left: 0
     position: absolute
     margin-top: 220px
   strong
@@ -25,6 +26,13 @@
     font-size: 1.2em
   p
     margin-bottom: 1em
+  input[type=email]
+    width: 70%
+    margin: auto
+    @media (max-width: $tablet-width)
+      width: 80%
+  button[type=submit]
+    float: right
 
 .form-equipo
   fieldset
