--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -26,7 +26,9 @@
               </div>
             </div>
             <div class="register-content toggable-content collapse col-xs-12" id="colabora">
-              <div class="top-arrow"></div>
+              <div class="top-arrow-wrapper">
+                <div class="top-arrow"></div>
+              </div>
               <div class="toggable-content--content col-xs-9">
                 <div class="content">{{content}}</div>
               </div>
