--- a/content/themes/fedes/partials/trabaja-con-nosotros.hbs
+++ b/content/themes/fedes/partials/trabaja-con-nosotros.hbs
@@ -19,7 +19,9 @@
       <div class="clearfix"></div>
     </a>
     <div class="register-content toggable-content collapse col-xs-12" id="register-form">
-      <div class="top-arrow"></div>
+      <div class="top-arrow-wrapper">
+        <div class="top-arrow"></div>
+      </div>
       <div class="toggable-content--content col-xs-9">
         <div class="content">{{content}}</div>
         {{subscribe_form placeholder="E-mail"
