--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -34,6 +34,22 @@
   button[type=submit]
     float: right
 
+.top-arrow-wrapper
+  @media (min-width: $tablet-width)
+    margin: auto
+    display: block
+    height: 20px
+    width: 20px
+    position: relative
+    .top-arrow
+      position: absolute
+      left: -130px
+
+#colabora
+  @media (min-width: $tablet-width)
+    .top-arrow-wrapper .top-arrow
+      left: 130px
+
 .form-equipo
   fieldset
     color: $turquoise
