sponsor logo in footer

--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -48,6 +48,7 @@
                 </a>
               </div>
             </div>
+            {{> "sponsor-logo"}}
             <div id="google_translate_element"></div>
           </div>
           <div class="logo-fedes-footer hidden show-on-contacts when-on-contacts">
