--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -93,3 +93,8 @@ footer
     background: $blue-dark
     padding-top: 1px
     padding-bottom: 25px
+
+.sponsor-logo
+  img
+    max-height: 160px
+    margin: auto
