prefer “Equipo” as tag

--- a/content/themes/fedes/partials/post-breadcrumbs.hbs
+++ b/content/themes/fedes/partials/post-breadcrumbs.hbs
@@ -6,7 +6,7 @@
       </li>
     {{/has}}
 
-    {{#has tag="Imagen Equipo"}}
+    {{#has tag="Equipo"}}
       <li class="breadcrumb-parent">
         <div class="circle-common"></div><a href="/equipo/">Equipo</a>
       </li>
