prefer “Equipo” as tag

--- a/content/themes/fedes/partials/post-breadcrumbs.hbs
+++ b/content/themes/fedes/partials/post-breadcrumbs.hbs
@@ -13,7 +13,7 @@
     {{/has}}
 
     <li class="active">
-      {{#has tag="Imagen Equipo"}}
+      {{#has tag="Equipo"}}
         {{title}}
       {{else}}
         {{tags from='2' autolink='false'}}
