--- a/content/themes/fedes/partials/post-breadcrumbs.hbs
+++ b/content/themes/fedes/partials/post-breadcrumbs.hbs
@@ -6,14 +6,14 @@
       </li>
     {{/has}}
 
-    {{#has tag="Equipo"}}
+    {{#has tag="Equipo, Directorio, Asamblea de socios"}}
       <li class="breadcrumb-parent">
         <div class="circle-common"></div><a href="/equipo/">Equipo</a>
       </li>
     {{/has}}
 
     <li class="active">
-      {{#has tag="Equipo"}}
+      {{#has tag="Equipo, Directorio, Asamblea de socios"}}
         {{title}}
       {{else}}
         {{tags from='2' autolink='false'}}
