--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -1,4 +1,4 @@
-#myCarouselEquipo
+.myCarouselEquipo
   .carousel-control
     background: none
     width: 30px
@@ -49,6 +49,10 @@
   @media (min-width: $tablet-width)
     .top-arrow-wrapper .top-arrow
       left: 130px
+
+.page-equipo
+  h2.gallery-title
+    margin-top: 40px
 
 .form-equipo
   fieldset
