--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -3,39 +3,26 @@
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
     {{> "carousel"}}
-    <div class="container gallery gallery-principal">
+    <div class="container gallery gallery-principal page-equipo">
       <h2 class="gallery-title">Conoce al equipo</h2>
-      {{> "carouselEquipo"}}
+      {{#get "posts" filter="tag:imagenequipo" as |images|}}
+        {{> "carouselEquipo" images=images index=1}}
+      {{/get}}
 
       <h2 class="gallery-title">Trabaja con nosotros</h2>
       <div class="row">
         {{> "trabaja-con-nosotros"}}
-        {{#get "posts" filter="tag:equipocontactos" order="title desc" as |post|}}
-          {{#foreach post}}
-            <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
-              <div class="gallery-element">
-                <div class="img-gallery" data-toggle="collapse" data-target="#colabora">
-                  <div class="img-responsive"
-                        style="background-image: url('{{image}}')"></div>
-                </div>
-                <div class="gallery-caption-wrapper">
-                  <div class="gallery-caption">
-                    <p>{{title}}</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="register-content toggable-content collapse col-xs-12" id="colabora">
-              <div class="top-arrow-wrapper">
-                <div class="top-arrow"></div>
-              </div>
-              <div class="toggable-content--content col-xs-9">
-                <div class="content">{{content}}</div>
-              </div>
-            </div>
-          {{/foreach}}
-        {{/get}}
+        {{> "trabaja-con-nosotros-toggable"}}
       </div>
+
+      {{#get "tags" filter="slug:directorio" as |tag|}}
+        {{#tag}}
+          <h2 class="gallery-title">{{name}}</h2>
+        {{/tag}}
+        {{#get "posts" filter="tag:directorio" as |images|}}
+          {{> "carouselEquipo" images=images index=2}}
+        {{/get}}
+      {{/get}}
     </div>
   </main>
 {{/post}}
