mensaje is required

--- a/content/themes/fedes/partials/footer-form.hbs
+++ b/content/themes/fedes/partials/footer-form.hbs
@@ -8,7 +8,7 @@
     <input type="email" class="form-control" id="emailInput" placeholder="e-mail" name="email" required>
   </div>
   <div class="form-group">
-    <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" name="mensaje"></textarea>
+    <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" name="mensaje" required></textarea>
   </div>
   <div class="help-block with-errors"></div>
   <button type="submit" class="btn btn-primary">enviar</button>
