--- a/content/themes/fedes/partials/footer-form.hbs
+++ b/content/themes/fedes/partials/footer-form.hbs
@@ -1,4 +1,9 @@
 <h6 class="textFooter-title">Use este formulario para enviarnos un mensaje:</h6>
+<!--
+  this form is handled by a third party service.
+  your token needs to match your referrer's request
+  so it may not work on local/dev/staging
+-->
 <form data-toggle="validator" action="https://mrthomas.herokuapp.com/api/v1/notification" method="POST" role="form">
   <input type="hidden" name="token" value="85150971a55d5e6ef489f6febe14a69d">
   <div class="form-group">
