use mr thomas’ keepalive

--- a/content/themes/fedes/partials/footer-form.hbs
+++ b/content/themes/fedes/partials/footer-form.hbs
@@ -4,6 +4,9 @@
   your token needs to match your referrer's request
   so it may not work on local/dev/staging
 -->
+<div class="hidden">
+  <img src="https://mrthomas.herokuapp.com/keepalive" />
+</div>
 <form data-toggle="validator" action="https://mrthomas.herokuapp.com/api/v1/notification" method="POST" role="form">
   <input type="hidden" name="token" value="85150971a55d5e6ef489f6febe14a69d">
   <div class="form-group">
