--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -98,3 +98,12 @@ footer
   img
     max-height: 160px
     margin: auto
+
+.actually-on-contacts
+  @media (min-width: $tablet-width)
+    .sponsor-logo
+      position: relative
+      & > a
+        position: absolute
+        right: -250px
+        top: -100px
