revise contactos page

--- a/content/themes/fedes/page-contactos.hbs
+++ b/content/themes/fedes/page-contactos.hbs
@@ -26,6 +26,11 @@
               {{> "footer-section" article=article}}
             {{/get}}
           </ul>
+          <ul class="nav nav-pills nav-stacked">
+            {{#get "posts" slug="email-fedes" as |article|}}
+              {{> "footer-section" article=article}}
+            {{/get}}
+          </ul>
         </div>
       </div>
 
