--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -22,6 +22,7 @@
   .textFooter-title
     font-size: 20px
     margin: 1em 0
+    font-family: latoRegular
     @media (min-width: $tablet-width)
       text-align: left
   .row
