--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -11,6 +11,9 @@
       color: $turquoise
       margin: 1em 0
 
+.textFooter-title
+  font-family: latoRegular
+
 .redesSociales.actually-on-contacts
   margin-top: 3em
   text-align: center
@@ -22,7 +25,6 @@
   .textFooter-title
     font-size: 20px
     margin: 1em 0
-    font-family: latoRegular
     @media (min-width: $tablet-width)
       text-align: left
   .row
