--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -59,6 +59,9 @@ footer
     @media (min-width: $tablet-width)
       position: absolute
       top: 0
+    .g-recaptcha
+      max-width: 100%
+      overflow: hidden
 
   .colFooter
     position: relative
