--- a/content/themes/fedes/partials/footer-form.hbs
+++ b/content/themes/fedes/partials/footer-form.hbs
@@ -19,7 +19,7 @@
   <div class="form-group">
     <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" name="mensaje" required></textarea>
   </div>
-  <div class="g-recaptcha" data-size="compact"></div>
+  <div class="g-recaptcha"></div>
   <div class="help-block with-errors"></div>
   <button type="submit" class="btn btn-primary">enviar</button>
 </form>
