--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -61,7 +61,7 @@ footer
       top: 0
     .g-recaptcha
       max-width: 100%
-      overflow: hidden
+      overflow: scroll
 
   .colFooter
     position: relative
